# dominion

./: .gitignore  CLAUDE.md  DOMINION.md  LICENSE  README.md  concerns.md  contex-eng.txt  package.json  post-init-mortem.md
.claude-plugin/: marketplace.json  plugin.json
cli/: pyproject.toml
cli/dominion_cli/: __main__.py  app.py
cli/dominion_cli/_vendor/: tomli_w.py
cli/dominion_cli/commands/: agents.py  auto.py  backlog.py  data.py  doc.py  history.py  improve.py  knowledge.py  metrics.py  phase.py  plan.py  profile.py  release.py  report.py  research.py  roadmap.py  security.py  signal.py  state.py  style.py  validate.py  wave.py  zone.py
cli/dominion_cli/core/: config.py  formatters.py  readers.py
cli/tests/: conftest.py  test_agents.py  test_data.py  test_plan.py  test_signal.py  test_state.py  test_validate.py  test_version.py
mcp/: .gitignore  pyproject.toml
mcp/dominion_mcp/: __init__.py  __main__.py  server.py
mcp/dominion_mcp/core/: complexity.py  config.py  correction.py  filesystem.py  knowledge.py  memory.py  methodology.py  panel.py  pipeline.py  plan.py  prepare.py  progress.py  state.py  validation.py
mcp/dominion_mcp/tools/: __init__.py  agent_lifecycle.py  data_read.py  data_write.py  knowledge.py  pipeline_tools.py  progress.py  setup.py  submit.py
mcp/tests/: conftest.py  test_complexity.py  test_config.py  test_correction.py  test_filesystem.py  test_memory.py  test_methodology.py  test_panel.py  test_pipeline.py  test_plan.py  test_prepare.py  test_progress.py  test_state.py  test_validation.py
registry/: registry.toml
(+218 files in other folders)
