[project]
name = "dominion-cli"
version = "0.9.1"
requires-python = ">=3.14"
dependencies = ["typer", "rich"]
description = "Data access layer for Dominion AI development methodology"

[project.scripts]
dominion-cli = "dominion_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
